fix: z-index for SetItem component

--- a/app/_components/SetItem/SetItem.module.css
+++ b/app/_components/SetItem/SetItem.module.css
@@ -16,6 +16,7 @@
   position: relative;
   white-space: nowrap;
   width: 100%;
+  z-index: 0;
 }
 
 .section:hover {
@@ -57,6 +58,7 @@
   display: block;
   position: absolute;
   inset: 0;
+  z-index: 1;
 }
 
 .words-number {
